Fix #34717: upgrade Spring, dependencies and JDK