@@ -104,7 +104,7 @@ public class TestIntegrationOnEcs {
                 Assertions.assertTrue(taskDefinition.volumes().isEmpty());
                 Assertions.assertEquals(1, taskDefinition.revision());
                 Assertions.assertEquals(1, taskDefinition.containerDefinitions().size());
-                ContainerDefinition containerDefinition = taskDefinition.containerDefinitions().get(0);
+                ContainerDefinition containerDefinition = taskDefinition.containerDefinitions().getFirst();
                 Assertions.assertEquals(List.of("R", "-e", "shinyproxy::run_01_hello()"), containerDefinition.command());
                 Assertions.assertEquals(List.of(), containerDefinition.dnsServers());
                 Map<String, String> dockerLabels = containerDefinition.dockerLabels();
@@ -151,7 +151,7 @@ public class TestIntegrationOnEcs {
                 Assertions.assertEquals(System.getenv("ITEST_ECS_EXECUTION_ROLE"), taskDefinition.executionRoleArn());
                 Assertions.assertEquals(System.getenv("ITEST_ECS_TASK_ROLE"), taskDefinition.taskRoleArn());
 
-                ContainerDefinition containerDefinition = taskDefinition.containerDefinitions().get(0);
+                ContainerDefinition containerDefinition = taskDefinition.containerDefinitions().getFirst();
                 LogConfiguration logConfiguration = containerDefinition.logConfiguration();
                 Assertions.assertNotNull(logConfiguration);
                 Assertions.assertEquals(LogDriver.AWSLOGS, logConfiguration.logDriver());
@@ -259,10 +259,10 @@ public class TestIntegrationOnEcs {
     }
 
     private Task getTask(Proxy proxy) {
-        String taskArn = proxy.getContainers().get(0).getRuntimeValue(BackendContainerNameKey.inst);
+        String taskArn = proxy.getContainers().getFirst().getRuntimeValue(BackendContainerNameKey.inst);
         List<Task> tasks = getEcsClient().describeTasks(builder -> builder.cluster(cluster).tasks(taskArn)).tasks();
         Assertions.assertEquals(1, tasks.size());
-        return tasks.get(0);
+        return tasks.getFirst();
     }
 
     private Map<String, String> getTags(Task task) {
